--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/cbg
+spring.datasource.username=penelope
+spring.datasource.password=longboi
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql: true
