--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
+	id 'io.freefair.lombok' version '6.5.1'
 }
 
 group = 'sweng'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '19'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
