Write xml and create duck-campus relationship
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=penelope
 spring.datasource.password=longboi
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql: true
+
+# Storage path
+storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage/
