Verify supplied key matches expected key
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql: true
 
 # Storage path
 storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
+
+# Auth
+penelope.api-principalHeader = IDENTITY
+penelope.api-credentialsHeader = KEY
