Do not append '/' when returning file paths and increase allowed file size
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=penelope
 spring.datasource.password=longboi
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql: true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
 # Storage path
 storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
