Initial switch to RSA for api keys
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # Storage path
-storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
+penelope.storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
+
+# Keys path
+penelope.storage.keys-folder = /home/joe2k01/Documents/sweng/penelope_keys
 
 # Auth
 penelope.api-principalHeader = IDENTITY
