--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation files('libs/dom4j-2.1.3.jar')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
