--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql: true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 # Storage path
 penelope.storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
