--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.5'
+	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
 	id 'io.freefair.lombok' version '6.5.1'
@@ -26,4 +26,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+task completeJavaDocs(type: Javadoc) {
+	source = sourceSets.main.allJava
+	classpath = project.sourceSets.main.compileClasspath
+	options.memberLevel = JavadocMemberLevel.PRIVATE
 }
