--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,18 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	evaluationImplementation.extendsFrom implementation
+	evaluationRuntimeOnly.extendsFrom implementation
+}
+
+sourceSets {
+	evaluation {
+		compileClasspath += main.output
+		runtimeClasspath += main.runtimeClasspath
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -32,4 +44,11 @@ task completeJavaDocs(type: Javadoc) {
 	source = sourceSets.main.allJava
 	classpath = project.sourceSets.main.compileClasspath
 	options.memberLevel = JavadocMemberLevel.PRIVATE
+}
+
+task bootRunEvaluate {
+    bootRun.configure {
+        classpath = sourceSets.evaluation.runtimeClasspath
+    }
+	finalizedBy bootRun
 }
