Switch to username and password users
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,4 @@ penelope.storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
 penelope.storage.keys-folder = /home/joe2k01/Documents/sweng/penelope_keys
 
 # Auth
-penelope.api-principalHeader = IDENTITY
-penelope.api-credentialsHeader = KEY
+penelope.api-credentialsHeader = Credentials
