Cleanup dead code from key auth
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ penelope.storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
 penelope.storage.keys-folder = /home/joe2k01/Documents/sweng/penelope_keys
 
 # Auth
+penelope.api-key = Key
 penelope.api-credentialsHeader = Credentials
