--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ penelope.storage.keys-folder = /home/joe2k01/Documents/sweng/penelope_keys
 # Auth
 penelope.api-key = Key
 penelope.api-credentialsHeader = Credentials
+
+# Wehther to inject default admin
+penelope.inject-admin = true
+
+# Default admin credentials
+penelope.adminUsername = theAdmin
+penelope.adminPassword = thePassword
