Initial user validation endpoint
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ penelope.storage.keys-folder = /home/joe2k01/Documents/sweng/penelope_keys
 penelope.api-key = Key
 penelope.api-credentialsHeader = Credentials
 
+# Auth validation
+penelope.validation-valid = Valid
+penelope.validation-admin = Admin
+
 # Wehther to inject default admin
 penelope.inject-admin = true
 
