Add campuses to validate endpoint and add users list endpoint
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,10 @@ penelope.api-credentialsHeader = Credentials
 penelope.validation-valid = Valid
 penelope.validation-admin = Admin
 
+# User permissions
+penelope.api-campusesHeader = Campuses
+penelope.campusesAll = -1
+
 # Wehther to inject default admin
 penelope.inject-admin = true
 
