--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.show-sql: true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+server.ssl.key-store=classpath:penelope.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=penelope
 
 # Storage path
 penelope.storage.base-folder = /home/joe2k01/Documents/sweng/penelope_storage
